unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/bt_base__Form_Submission_Answer__c.object-meta.xml
<CustomObject>
    <description>Each submitted form answer is saved here.</description>
    <label>BT Form Submission Answer</label>
    <nameField>
        <displayFormat>FSA-{000000}</displayFormat>
        <label>BT Form Submission Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT Form Submission Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>