unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Answer__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Answer__c</fullName>
    <description>The submitted answer for this record.</description>
    <inlineHelpText>The submitted answer for this record.</inlineHelpText>
    <label>Answer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>