unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Answer_Date__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Answer_Date__c</fullName>
    <description>If the answer was in the form of a date.</description>
    <inlineHelpText>If the answer was in the form of a date.</inlineHelpText>
    <label>Answer Date</label>
    <type>Date</type>
</CustomField>