unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Answer_Mapped__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Answer_Mapped__c</fullName>
    <description>The date/time that the answer was mapped.</description>
    <inlineHelpText>The date/time that the answer was mapped.</inlineHelpText>
    <label>Answer Mapped</label>
    <type>DateTime</type>
</CustomField>