unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Answer_Number__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Answer_Number__c</fullName>
    <description>If the answer was in the form of a number.</description>
    <inlineHelpText>If the answer was in the form of a number.</inlineHelpText>
    <label>Answer Number</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>