unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Big_List_Option_Answer__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Big_List_Option_Answer__c</fullName>
    <description>If the record was from a big list submission, this is the option answer.</description>
    <formula>bt_base__Form_Big_List_Option__r.bt_base__Option_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the record was from a big list submission, this is the option answer.</inlineHelpText>
    <label>Big List Option Answer</label>
    <type>Text</type>
</CustomField>