unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__File_Upload_Key__c.field-meta.xml
<CustomField>
    <fullName>bt_base__File_Upload_Key__c</fullName>
    <description>A unique key that references the uploaded file to this record.</description>
    <inlineHelpText>A unique key that references the uploaded file to this record.</inlineHelpText>
    <label>File Upload Key</label>
    <length>50</length>
    <type>Text</type>
</CustomField>