unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Form_Big_List_Option__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form_Big_List_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related big list option if this record was from a big list submission.</description>
    <inlineHelpText>The related big list option if this record was from a big list submission.</inlineHelpText>
    <label>BT Form Big List Option</label>
    <referenceTo>bt_base__Form_Big_List_Option__c</referenceTo>
    <relationshipLabel>BT Form Submission Answers</relationshipLabel>
    <relationshipName>Form_Submission_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>