unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Form_Element__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form_Element__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Form Element related to this record.</description>
    <inlineHelpText>The Form Element related to this record.</inlineHelpText>
    <label>BT Form Element</label>
    <referenceTo>bt_base__Form_Element__c</referenceTo>
    <relationshipLabel>BT Form Submission Answers</relationshipLabel>
    <relationshipName>Form_Submission_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>