unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Form_Element_Type__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form_Element_Type__c</fullName>
    <description>The type of question that was asked as part of this Form Submission Answer.</description>
    <formula>TEXT(bt_base__Form_Element__r.bt_base__Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The type of question that was asked as part of this Form Submission Answer.</inlineHelpText>
    <label>BT Form Element Type</label>
    <type>Text</type>
</CustomField>