unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/bt_base__Form_Submission__c.field-meta.xml
<CustomField>
    <fullName>bt_base__Form_Submission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The originating Form Submission.</description>
    <inlineHelpText>The originating Form Submission.</inlineHelpText>
    <label>BT Form Submission</label>
    <referenceTo>bt_base__Form_Submission__c</referenceTo>
    <relationshipLabel>BT Form Submission Answers</relationshipLabel>
    <relationshipName>Form_Submission_Answers</relationshipName>
    <type>Lookup</type>
</CustomField>