unpackaged/main/default/objects/bt_base__Form_Submission_Answer__c/fields/conference360__Attendee_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Attendee_Full_Name__c</fullName>
    <formula>conference360__Attendee__r.conference360__Attendee_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Full Name</label>
    <type>Text</type>
</CustomField>